[package]
name = "glfw-sys"
version = "6.0.0"
authors = ["Camilla Berglund <elmindreda@elmindreda.org>"]
description = "An Open Source, multi-platform library for creating windows with OpenGL contexts and receiving input and events"
documentation = "http://www.glfw.org/documentation.html"
homepage = "http://www.glfw.org/"
repository = "https://github.com/PistonDevelopers/glfw-sys"
readme = "README.md"
license = "Zlib"
edition = "2021"
build = "build.rs"
links = "glfw"


[features]
default = ["all"]
all = ["x11", "wayland", "native-handles", "native-gl", "native-egl", "vulkan"]
bindgen = ["dep:bindgen"]
# build from source, instead of using prebuilt libraries.
src-build = ["dep:cmake"]
prebuilt-libs = []

static-link = [] # static link (if on linux, src-build must also be enabled)
vulkan = []
wayland = []
x11 = []
native-handles = []
native-gl = []
native-egl = [] 
osmesa = [] 


[dependencies]

[build-dependencies]
bindgen = { version = "0.71", optional = true }
cmake = { version = "0.1", optional = true }
pkg-config = "0.3"

[dev-dependencies]
glow = {version = "0.16"}

# lets skip building glfw on docs.rs builds
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "wasm32-unknown-emscripten"]